tests/ui/did_you_mean/issue-114112.stderr
error: generic args in patterns require the turbofish syntax
  --> $DIR/issue-114112.rs:7:10
   |
LL |         E<i32>::A(v) => {
   |          ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |         E::<i32>::A(v) => {
   |          ++

error: aborting due to 1 previous error

